substrate/primitives/runtime/proc-macro/tests/ui/wrong_input8.stderr
error: unexpected token
  --> tests/ui/wrong_input8.rs:20:59
   |
20 | #[with_features_try_runtime_and_runtime_benchmarks(feature("std"))]
   |                                                           ^^^^^^^
